@startuml

title __SPRINGBOOTCRUD's Class Diagram__\n

  namespace  {
    class MavenWrapperDownloader {
    }
  }
  

  namespace  {
    namespace k.fri.uniza {
      class sk.fri.uniza.SpringBootCrudApplication {
      }
    }
  }
  

  namespace  {
    namespace k.fri.uniza {
      namespace configuration {
        class sk.fri.uniza.configuration.DefaultViewConfig {
        }
      }
    }
  }
  

  namespace  {
    namespace k.fri.uniza {
      namespace controllers {
        class sk.fri.uniza.controllers.ZamestnanecController {
        }
      }
    }
  }
  

  namespace  {
    namespace k.fri.uniza {
      namespace dao {
        interface sk.fri.uniza.dao.Dao {
        }
      }
    }
  }
  

  namespace  {
    namespace k.fri.uniza {
      namespace dao {
        class sk.fri.uniza.dao.ZamestanecDao {
        }
      }
    }
  }
  

  namespace  {
    namespace k.fri.uniza {
      namespace model {
        class sk.fri.uniza.model.Zamestnanec {
        }
      }
    }
  }
  

  namespace  {
    namespace k.fri.uniza {
      namespace service {
        interface sk.fri.uniza.service.Service {
        }
      }
    }
  }
  

  namespace  {
    namespace k.fri.uniza {
      namespace service {
        class sk.fri.uniza.service.ZamestnanecServiceImpl {
        }
      }
    }
  }
  

  sk.fri.uniza.configuration.DefaultViewConfig .up.|> org.springframework.web.servlet.config.annotation.WebMvcConfigurer
  sk.fri.uniza.controllers.ZamestnanecController o-- sk.fri.uniza.service.ZamestnanecServiceImpl : service
  sk.fri.uniza.dao.ZamestanecDao .up.|> sk.fri.uniza.dao.Dao
  sk.fri.uniza.service.ZamestnanecServiceImpl .up.|> sk.fri.uniza.service.Service
  sk.fri.uniza.service.ZamestnanecServiceImpl o-- sk.fri.uniza.dao.ZamestanecDao : zamestanecDao


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
